background fixed attempt 5 on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,25 +2,15 @@
 
 html {
     background-color: black;
-    width: 100%;
-	height: 100%;
 }
 
 body{
+    // background: linear-gradient(to right, red , yellow);
     background-image: url("https://i.imgur.com/fvVLP9j.png")!important;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
     font-weight: bold;
-    width: 100%;
-	height: 100%;
-    
-}
-
-#wrapper{
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
 }
     
 .container {
